Fixed issues #34348 and #35186 - IllegalArgumentException when creating column property sheet